fix: added letter spacing

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -3,6 +3,8 @@
 
   transition: background-color 0.2s;
 
+  letter-spacing: 0.5px;
+
   text-transform: uppercase;
 
   color: var(--color-white);
