--- a/src/components/Tabs/Tab/Tab.css
+++ b/src/components/Tabs/Tab/Tab.css
@@ -22,6 +22,8 @@
 
   text-align: center;
 
+  letter-spacing: 0.5px;
+
   text-transform: uppercase;
 
   color: var(--color-black);
